--- a/.github/workflows/project_actions.yml
+++ b/.github/workflows/project_actions.yml
@@ -32,7 +32,7 @@ jobs:
           - name: Install dependencies
             run: |
               python -m pip install --upgrade pip
-              pip install -r requirements.txt
+              pip install -r social_project/equirements.txt
       
           - name: Run tests
             run: python social_project/manage.py test tests
