--- a/.github/workflows/project_actions.yml
+++ b/.github/workflows/project_actions.yml
@@ -28,11 +28,18 @@ jobs:
             uses: actions/setup-python@v2
             with:
               python-version: 3.x
-      
+            
+
           - name: Install dependencies
             run: |
               python -m pip install --upgrade pip
               pip install -r social_project/requirements.txt
+
+          
+          - name: MakeMigrations
+            run:   python3 social_project/manage.py migrate
       
+
+
           - name: Run tests
             run: python social_project/manage.py test tests
